investigator/openshift/cluster-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: investigator
  labels:
    app: investigator
