investigator/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investigator
  namespace: investigator
  labels:
    app: investigator
spec:
  selector:
    app: investigator
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
